Updated the settings to match the new flat-list based roots

--- a/src/FilesCollector/AppSettings.json
+++ b/src/FilesCollector/AppSettings.json
@@ -22,25 +22,25 @@
       "Microsoft.AspNet.WebPages.WebData",
       "MvcDiagnostics"
     ],
-    "LangFoldersToProcess": [
-      "ENU",
-      "CHS",
-      "CHT",
-      "CSY",
-      "DEU",
-      "ESN",
-      "FRA",
-      "ITA",
-      "JPN",
-      "KOR",
-      "PLK",
-      "PTB",
-      "RUS",
-      "TRK"
+    "RelevantCultures": [
+      "ENU/",
+      "CHS/zh-Hans",
+      "CHT/zh-Hant",
+      "CSY/cs",
+      "DEU/de",
+      "ESN/es",
+      "FRA/fr",
+      "ITA/it",
+      "JPN/ja",
+      "KOR/ko",
+      "PLK/pl",
+      "PTB/pt-br",
+      "RUS/ru",
+      "TRK/tr"
     ],
     "VersionSuffixes": [
-      "5.2.4",
-      "3.2.4"
+      "5.2.5",
+      "3.2.5"
     ],
     "SourcePackagesRoot": "",
     "OutputFolder": ""
